# multitask-context-dependent-behavior

./: .env  .gitignore  .gitmessage  .gitmodules  ARCHIVE_LOG.md.template  Makefile  NOTES.md  README.md  ROADMAP.md  conda-lock.yml  env_spec.yml  environment-save.yml  environment.yaml  environment.yml  main.sh  meta.env  mtcdb-etl.code-workspace  mtcdb.code-workspace  mypy.ini  path.env  pipeline.txt  pyproject.toml  setup.sh  tmp.environment.yaml
.github/: .gitmessage
.github/ISSUE_TEMPLATE/: .gitmessage  1-general.yml  general-issue.md
archive/: assign_folds.py  base_data_struct_with_lazy.py  base_processor.py  manage_dev_pkg.py  save_netCDF.py
archive/2025-01-04/: ARCHIVE_LOG.md  base_data_struct_with_meta.py  base_pipeline.py  bootstrap.py  core_data.py  manage_env_vars.py  manage_path_vars.py  useful_packages.txt
archive/2025-01-04/composites/: exp_conditions.py
archive/2025-01-04/coordinates-1/: __init__.py  exp_condition.py  time.py
archive/2025-01-04/coordinates-2/: base_coord.py  exp_factor_coord.py
archive/2025-01-04/entities/: README  __init__.py  base_entity.py  bio.py  exp_condition.py  exp_structure.py
archive/2025-01-04/preprocess/: assign_ensembles.py  assign_folds.py  bootstrap.py
archive/2025-01-11/: ARCHIVE_LOG.md  NOTES.md
archive/2025-01-11/setup/: post_activate.sh
archive/2025-01-22/: ARCHIVE_LOG.md
archive/2025-01-22/config/: map_retrieve.yml
archive/2025-06-01_readme/: ARCHIVE_LOG.md
archive/2025-06-08_pyproject/: ARCHIVE_LOG.md  pyproject.toml
archive/coordinates-1/: README  bio.py
archive/coordinates-2/: README  exp_structure_coord.py  time_coord.py  trial_analysis_label_coord.py
archive/entities/: composites.py
archive/preprocess/: __init__.py  align_spikes.py
config/: .env  .pylintrc  black.toml  dir_deploy.yml  environment.yml  main.yml  map_deploy.yml  pylintrc.ini  sync_map.yaml  template.env
config/credentials/: data4.env  lspaud1.env  marrsfreestyle.env  maryland.env
config/deploy/: Makefile  connect_with_key.sh  deploy.py
config/deploy/credentials/: lspaud1.env  maryland.env
config/dictionaries/: programming.txt  project.txt  python.txt  sphinx.txt  tools.txt  user.txt  vscode.txt
config/environment/: Makefile
config/hub/: Makefile
config/hydra/: job_logging.yaml  output.yaml
config/lead/: environment.yml
config/parameters/: default.yaml  ex_pipeline.yaml
config/paths/: default.yaml  ex_pipeline.yaml
config/tools/: .env  black.toml  mypy.ini  pylint_config_loader.py  pylint_configurer.py  pylintrc.ini  pylintrc_base.ini  pylintrc_disable.ini  pylintrc_tests.ini  pyrightconfig.json
dictionaries/: programming.txt  project.txt  python.txt  sphinx.txt  user.txt  vscode.txt
docs/: Makefile  architecture.md  data_collection.rst  data_extraction.rst  data_structures.rst  data_transfer.rst  developer_guide.md  index.md  installation.md  servers.rst
docs/etl/: data_collection.md  data_collection.rst  data_extraction.md  data_structures.md  data_transfer.md  file_system.md  file_system.rst  servers.md
docs/reports/: test_results.xml
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/_templates/: test_report_template.txt
docs/source/about/: contributors.rst  license.rst
docs/source/analyses/: geom_baseline_analysis.rst  subpopulation_analysis.rst
docs/source/code/: cls_datasets.rst  constants.rst  index.rst  install.rst  prerequisites.rst  sbpkg_classes.rst  test_report.rst  test_results.xml  usage.rst
docs/source/data_recovery/: extract_spikes.rst  index.rst  raw_data.rst  transfer.rst
docs/source/results/: index.rst
notebooks/: TORCS.ipynb  subpops.ipynb
notebooks/exploration/: identify_subpops.ipynb
notebooks/tests/: dprimes.pkl  explore_data.ipynb  import_data.ipynb  prestim_rates.pkl  recover_dataframes.ipynb  sandbox.ipynb
ops/: build_docs  connect_hub  deploy_to_hub  retrieve_from_hub  test
scripts/: compose_envs.py  run_pipeline.py
scripts/data-ingestion/: .env  tree.sh
server-transfer/: .env  temp_file.txt
setup/: Makefile  bin.pth  environment.yml  init.sh  post_activate.sh  python.pth  sync_map.yaml  sync_map.yml
setup/hub/: environment.yml  path.env
setup/network/: Makefile  deploy.py  mount_data.sh  send_keys.sh
setup/setup_env/: Makefile  __init__.py  manage_dev_pkg.py  manage_env_vars.py
setup/setup_tools/: __init__.py  set_env_vars.py
src/: __version__.py  test_ext.py
src/core/: __init__.py  constants.py  py.typed
src/core/attributes/: __init__.py  base_attribute.py  base_entity.py  bio_info.py  brain_info.py  exp_factors.py  exp_structure.py  trial_analysis_labels.py
src/core/builders/: __init__.py  base.py  base_builder.py  build_coord_exp_factor.py  build_core_spikes.py  build_ensembles.py  build_exp_factor_coord.py  build_folds.py  build_input_data.py  build_neuronal_activity.py  build_pop.py  build_population_data.py  build_pseudo_trials.py  build_session_trials.py  build_spike_trains.py  build_trial_coords.py
src/core/composites/: __init__.py  attribute_set.py  base_container.py  candidates.py  containers.py  containers_fixed.py  coordinate_set.py  exp_conditions.py  features.py  strata.py
src/core/coordinates/: __init__.py  base.py  base_coord.py  base_coordinate.py  bio.py  bio_info_coord.py  brain_info_coord.py  coord_manager.py  exp_condition.py  exp_factor_coord.py  exp_structure.py  exp_structure_coord.py  time.py  (+4 more)
src/data_transfer/: setup_directories.py
src/ingest/: __init__.py  process_evp.m  process_evp.py
src/mtcdb/: __init__.py  __main__.py  cli.py  constants.py  types.py
src/mtcdb_etl/: __init__.py  main.sh
src/remote_access/: mount_data.sh
src/utils/: __init__.py  config_loader.py
stubs/: __init_.py
tests/: Makefile  conftest.py  test_ext.py
tests/mock_data/: __init__.py  match_content.py  python_objects.py
tests/mtcdb/: test_module.py
tests/test_core/: __init__.py  py.typed
tests/test_mtcdb/: __init__.py
tests/test_setup/: __init__.py  test_manage_dev_pkg.py
tests/test_tasks/: __init__.py
tests/test_utils/: __init__.py  test_storage_rulers.py
(+376 files in other folders)
